stratosource/stratosource/sfdiff/testfiles/ltest/unpackaged/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Type_Detail__c</fullName>
        <label>Type Detail</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>Account Merge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add User to Existing Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anticipated Seat Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Backed Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaigns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cannot Save Records</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cannot Submit Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cannot View Records</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Load</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Load Conflicts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Load Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conflicts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conflicts and Mapping Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contracts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dashboards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deactivate User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deal Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Notification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA SE Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eval Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harte-Hanks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hoover’s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jigsaw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Distribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leads</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UAT_Group__c</fullName>
        <description>For User Acceptance Testing for each requirement, the specific group will be entered to trace the requirement through the testing sequence.</description>
        <label>UAT Group</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Work_Module__c</fullName>
        <label>Work Module</label>
        <picklist>
            <picklistValues>
                <fullName>Account Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Office Enablement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forecasting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General SFDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Systems Integration</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X10_Confirm_training_is_completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Required to close cases with Type - Partner Activation. (see validation rule)</description>
        <label>10. Confirm training is completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X11_Generate_user_ID_password__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Required to close cases with Type - Partner Activation. (see validation rule)</description>
        <label>11. Generate user ID &amp; password</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X12_Notify_Channel_Ops_process_complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Required to close cases with Type - Partner Activation. (see validation rule)</description>
        <label>12. Notify Channel Ops-process complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X13_Participating_in_Deal_Registration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box when a partner is participatng in Deal Registration.</description>
        <label>13. Participating in Deal Registration?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X14_Participating_in_MDF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>14. Participating in MDF?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X15_Participating_in_Business_Planning__c</fullName>
        <defaultValue>false</defaultValue>
        <label>15. Participating in Business Planning ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X1_Recd_Partner_Activation_Template__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Required to close cases with Type - Partner Activation. (see validation rule)</description>
        <label>1. Recd Partner Activation Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2_Confirm_Partner_is_in_Partner_Center__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Required to close cases with Type - Partner Activation. (see validation rule)</description>
        <label>2. Confirm Partner is in Partner Center</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X3_Notify_Channel_Ops_Ready_for_Training__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Required to close cases with Type - Partner Activation. (see validation rule)</description>
        <label>3. Notify Channel Ops-Ready for Training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X4_Partner_Acct_Contact_exist_in_SFDC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Required to close cases with Type - Partner Activation. (see validation rule)</description>
        <label>4. Partner Acct/Contact exist in SFDC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X5_Create_Acct_Contact_in_SFDC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Required to close cases with Type - Partner Activation. (see validation rule)</description>
        <label>5. Create Acct/Contact in SFDC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X6_Set_up_Inside_Sales_Rep_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Required to close cases with Type - Partner Activation. (see validation rule)</description>
        <label>6. Set up Inside Sales Rep Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X7_Set_up_Lead_Distribution_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Required to close cases with Type - Partner Activation. (see validation rule)</description>
        <label>7. Set up Lead Distribution Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X8_Set_up_Views_Queues__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Required to close cases with Type - Partner Activation. (see validation rule)</description>
        <label>8. Set up Views/Queues</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X9_Set_up_Routing_Rules__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Required to close cases with Type - Partner Activation. (see validation rule)</description>
        <label>9. Set up Routing Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sfdc_Accounts_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Territory changes have been updated for accounts in salesforce.com</description>
        <label>sfdc Accounts Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sfdc_Leads_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Territory Changes have been updated for leads in salesforce.com</description>
        <label>sfdc Leads Updated</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>,Case.Partner_General_Issues,Case.Partner_Request_Profile_Update,Case.Partner_Request_Upgrade</value>
        </filters>
        <label>All Open Cases</label>
        <language>en_US</language>
        <sharedTo>
            <roles>Global Administration</roles>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Anil_Reddy_s_cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Region__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER_NAME</field>
            <operation>contains</operation>
            <value>reddy,sunil</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Anil and Sunil&apos;s cases</label>
        <language>en_US</language>
        <sharedTo>
            <roles>Global Administration</roles>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Anticipated_Seat_Requests</fullName>
        <columns>NAME</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Region__c</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <columns>CASES.STATUS</columns>
        <columns>OWNER_NAME</columns>
        <columns>Department__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Momentum</value>
        </filters>
        <filters>
            <field>CASES.SUBJECT</field>
            <operation>contains</operation>
            <value>Anticipated</value>
        </filters>
        <label>Anticipated Seat Requests</label>
        <language>en_US</language>
        <queue>General</queue>
        <sharedTo>
            <groups>Admins</groups>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Application_Maintenance</fullName>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Target_Deployment_Date__c</columns>
        <columns>PARENT.CASE_NUMBER</columns>
        <columns>Post_as_a_Top_Issue__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Application Maintenance</label>
        <language>en_US</language>
        <queue>IT Application Maintenance</queue>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Application_Maintenance_Approved</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Target_Deployment_Date__c</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Region__c</columns>
        <columns>Post_as_a_Top_Issue__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Post_as_a_Top_Issue__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Application Maintenance - Approved</label>
        <language>en_US</language>
        <queue>IT Application Maintenance</queue>
        <sharedTo>
            <groups>Admins</groups>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Business_Analytics_Reporting</fullName>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Business Analytics Queue</label>
        <language>en_US</language>
        <queue>Business Analytics Reporting</queue>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Business_Analytics_by_assigned_owner</fullName>
        <columns>OWNER_NAME</columns>
        <columns>Region__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <columns>NAME</columns>
        <columns>CASES.PRIORITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>balfo,tbose,esmit,bstat,slc,mpashby,rhess,kkubi,kadams</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Business Analytics  by owner -WIP</label>
        <language>en_US</language>
        <sharedTo>
            <groups>Global Business Analytics</groups>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Business_Analytics_closed</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Region__c</columns>
        <columns>OWNER_NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.REASON</columns>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <columns>CASES.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>balfo,tbose,esmit,bstat,slc,mpashby,rhess,kadams,kkubit</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>Business Analytics  Closed</label>
        <language>en_US</language>
        <sharedTo>
            <groups>Global Business Analytics</groups>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cases_from_CD</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>apost,rebek,statn</value>
        </filters>
        <label>Cases from CD</label>
        <language>en_US</language>
        <sharedTo>
            <groups>Customer Data</groups>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Channel_Load_cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.TYPE</field>
            <operation>equals</operation>
            <value>Channel Load</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Channel Load cases</label>
        <language>en_US</language>
        <sharedTo>
            <roles>Global Administration</roles>
            <roles>Global Operations</roles>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Credit_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.TYPE</field>
            <operation>equals</operation>
            <value>Credit</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Credit Cases</label>
        <language>en_US</language>
        <sharedTo>
            <groups>Admins</groups>
            <groups>EMEA Credit</groups>
            <groups>NA Credit</groups>
            <roles>Global Finance</roles>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Customer_Data_Queue</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Customer Data Queue</label>
        <language>en_US</language>
        <queue>Customer Data</queue>
        <sharedTo>
            <groups>Admins</groups>
            <groups>Customer Data</groups>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Customer_Data_Team_View</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>aiken,o&apos;sullivan,mcevoy,natsiopoulos,coulter</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notContain</operation>
            <value>closed</value>
        </filters>
        <label>Customer Data Team View</label>
        <language>en_US</language>
        <sharedTo>
            <groups>Customer Data</groups>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Dave_Meder_s_Cases_Approved_RFP</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Submit_to_RFC__c</columns>
        <columns>Approved_by_RFC__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approved_by_RFC__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Dave Meder&apos;s Cases - Approved by RFC</label>
        <language>en_US</language>
        <sharedTo>
            <roles>Global Administration</roles>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EMEACasesAllOpen</fullName>
        <booleanFilter>2 and (1 or 3)</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>EMEA</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Seth</value>
        </filters>
        <label>EMEA Cases - All Open</label>
        <language>en_US</language>
        <sharedTo>
            <groups>EMEA Sales Ops</groups>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>BugTracking</fullName>
        <active>false</active>
        <businessProcess>Enhancements</businessProcess>
        <label>Bug Tracking</label>
    </recordTypes>
    <recordTypes>
        <fullName>Enhancements</fullName>
        <active>false</active>
        <businessProcess>Enhancements</businessProcess>
        <description>MOMENTUM tickets or Parking Lot issues which are worth considering for future releases and should be ranked &amp; scored</description>
        <label>Enhancements</label>
    </recordTypes>
    <recordTypes>
        <fullName>Future</fullName>
        <active>false</active>
        <businessProcess>Momentum</businessProcess>
        <description>Future enhancements</description>
        <label>Future</label>
    </recordTypes>
    <recordTypes>
        <fullName>IT</fullName>
        <active>true</active>
        <businessProcess>IT</businessProcess>
        <description>App Maintenance Process</description>
        <label>IT</label>
    </recordTypes>
    <recordTypes>
        <fullName>Momentum</fullName>
        <active>true</active>
        <businessProcess>Momentum</businessProcess>
        <description>Tickets logged by end-users live in the system</description>
        <label>Momentum</label>
    </recordTypes>
    <recordTypes>
        <fullName>ParkingLot</fullName>
        <active>false</active>
        <businessProcess>Parking Lot</businessProcess>
        <description>Feedback from UAG, UAT, TTT &amp; Training Sessions</description>
        <label>Parking Lot</label>
    </recordTypes>
    <recordTypes>
        <fullName>Partner_General_Issues</fullName>
        <active>true</active>
        <businessProcess>Partner Portal</businessProcess>
        <description>This is where you file bugs, issues, cases or general requests</description>
        <label>Partner General Issues</label>
    </recordTypes>
    <recordTypes>
        <fullName>Partner_Request_Profile_Update</fullName>
        <active>true</active>
        <businessProcess>Partner Portal</businessProcess>
        <description>Used by the partner user to request changes to company profile information.</description>
        <label>Partner Request Profile Update</label>
    </recordTypes>
    <recordTypes>
        <fullName>Partner_Request_Upgrade</fullName>
        <active>true</active>
        <businessProcess>Partner Portal</businessProcess>
        <description>This allows you to request a profile upgrade</description>
        <label>Partner Request Upgrade</label>
    </recordTypes>
    <recordTypes>
        <fullName>Projects</fullName>
        <active>false</active>
        <businessProcess>Momentum</businessProcess>
        <description>Utilized to track projects based on receipt of multiple similar requests.</description>
        <label>Projects</label>
    </recordTypes>
    <recordTypes>
        <fullName>Request_Specialization</fullName>
        <active>true</active>
        <businessProcess>Partner Portal</businessProcess>
        <description>This is where you identify any specilizations that you have</description>
        <label>Partner Request Specialization</label>
    </recordTypes>
    <validationRules>
        <fullName>Case_owner_Read_only</fullName>
        <active>true</active>
        <description>Prevent Business users to change case owner.</description>
        <errorConditionFormula>IF(AND($Profile.Name &lt;&gt; &apos;Global Level 1&apos;,$Profile.Name &lt;&gt; &apos;Global Level 2&apos;,$Profile.Name &lt;&gt; &apos;Global Level 3&apos;,$Profile.Name &lt;&gt; &apos;Apex Deployment&apos;,$Profile.Name &lt;&gt; &apos;Sys Admin - No Expire Password&apos;,$Profile.Name &lt;&gt; &apos;NA Sales Administrator&apos;, $Profile.Name &lt;&gt; &apos;Customer Data&apos;,$Profile.Name &lt;&gt; &apos;System Administrator&apos;,$Profile.Name &lt;&gt; &apos;Systems Administrator - Level 1&apos;, NOW() &lt;&gt; CreatedDate, ISCHANGED( OwnerId )), TRUE, FALSE )</errorConditionFormula>
        <errorDisplayField>OwnerId</errorDisplayField>
        <errorMessage>You cannot change Case owner. Please contact your admin.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Change_Status</fullName>
        <active>true</active>
        <description>Prevent business users to change Status.</description>
        <errorConditionFormula>IF(AND( LEFT($RecordType.Name, 7) &lt;&gt;&apos;Partner&apos;, $Profile.Name &lt;&gt; &apos;Global Level 1&apos;,$Profile.Name &lt;&gt; &apos;Global Level 2&apos;,$Profile.Name &lt;&gt; &apos;Global Level 3&apos;,$Profile.Name &lt;&gt; &apos;Apex Deployment&apos;,$Profile.Name &lt;&gt; &apos;Sys Admin - No Expire Password&apos;,$Profile.Name &lt;&gt; &apos;System Administrator&apos;, $Profile.Name &lt;&gt; &apos;NA Sales Administrator&apos;, $Profile.Name &lt;&gt; &apos;Customer Data&apos;, $Profile.Name &lt;&gt; &apos;NA Order Entry&apos;, $Profile.Name &lt;&gt; &apos;Systems Administrator - Level 1&apos;, ISCHANGED( Status )), TRUE, FALSE )</errorConditionFormula>
        <errorMessage>You cannot change &apos;Status&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Partner_Cases_Case_Resolution_Required</fullName>
        <active>true</active>
        <description>Status Closed Case Resolution Needed it</description>
        <errorConditionFormula>AND(
ISPICKVAL(Status, &quot;Closed&quot;),
CONTAINS($RecordType.Name, &apos;Partner&apos;),
Case_Resolution__c = &quot;&quot;,
Contact.LastName &lt;&gt;&quot;Mendler&quot;
)</errorConditionFormula>
        <errorDisplayField>Case_Resolution__c</errorDisplayField>
        <errorMessage>Case Resolution is required to close this Case</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Partner_Profile_Update_Information</fullName>
        <active>true</active>
        <description>Partner Profile Update - have to fill some information before submit the case: New address, New Company Name, Additional Countries of Operation)</description>
        <errorConditionFormula>AND(
$RecordType.DeveloperName  = &quot;Partner_Request_Profile_Update&quot;, 
ISBLANK(New_Address__c), 
ISBLANK(New_Company_Name__c), 
ISBLANK(Additional_Countries_of_Operation__c))</errorConditionFormula>
        <errorMessage>Please fill out the information that you want to change in your Profile before submit the case</errorMessage>
    </validationRules>
</CustomObject>